--- a/client/src/components/Contact/Contact.scss
+++ b/client/src/components/Contact/Contact.scss
@@ -1,14 +1,17 @@
 .contact {
   position: relative;
-  height: 100vh;
+  height: 100%;
+
   &__back {
     position: absolute;
     width: 100%;
     right: 45%;
     mix-blend-mode: screen;
+
     &.dark {
       opacity: 25%;
     }
+
     @media only screen and (max-width: 768px) {
       width: 250%;
       right: 0%;
@@ -20,14 +23,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: -1;
   backdrop-filter: blur(5px);
   border-radius: 10px;
-  box-shadow: 0px 1px 7px 4px rgb(0 0 0 / 15%);
+  box-shadow: 0px 1px 7px 4px rgba(0, 0, 0, 0.15);
   justify-content: center;
-  margin-top: 4rem;
   padding: 2rem;
-  margin: auto;
+  margin-bottom: 5rem;
   border-radius: 10px;
 
   .content {
@@ -37,10 +38,12 @@
   .contact-text {
     text-align: center;
     margin: 15px;
+
     .title__container {
       position: relative;
       width: fit-content;
       margin: auto;
+
       .title {
         margin: 10px auto;
         backdrop-filter: blur(24px);
@@ -58,8 +61,8 @@
         -webkit-text-fill-color: transparent;
         background-clip: text;
         text-fill-color: transparent;
-
         mix-blend-mode: normal;
+
         &.dark {
           background: radial-gradient(
             50% 50% at 50% 50%,
@@ -70,7 +73,6 @@
           -webkit-text-fill-color: transparent;
           background-clip: text;
           text-fill-color: transparent;
-
           mix-blend-mode: normal;
         }
       }
@@ -80,24 +82,30 @@
   .contactForm {
     display: flex;
     flex-direction: column;
+    align-items: center;
+
     .Name_Area {
       display: flex;
       justify-content: center;
       gap: 10px;
+
       .name_input {
         width: 100%;
       }
     }
+
     .input {
+      width: 100%;
       margin: 8px;
+
       input {
         height: 3rem;
         border-radius: 10px;
         background-color: rgb(237, 237, 237);
       }
+
       textarea {
         background-color: rgb(237, 237, 237);
-
         max-height: 10rem;
         min-height: 10rem;
         border-radius: 10px;
@@ -111,28 +119,32 @@
 @media (max-width: 764px) {
   .container {
     padding: 1rem;
-    // height: 120%;
-    // width: 95%;
+
     .content {
       width: 76%;
     }
   }
+
   .button-main {
     margin: auto;
     width: 15rem;
   }
+
   .container .contact-text .title__container .title {
     font-size: 1.5rem;
   }
+
   .contactForm {
     .Name_Area {
       flex-direction: column;
     }
+
     textarea {
       height: 100px;
     }
   }
 }
+
 @media (max-width: 390px) {
   .container .contact-text .title__container .title {
     font-size: 1.2rem;
