--- a/client/src/components/Services/Services.scss
+++ b/client/src/components/Services/Services.scss
@@ -70,6 +70,10 @@
 
         mix-blend-mode: normal;
 
+        @media screen and (max-width: 500px) {
+          font-size: 1.5rem !important;
+        }
+
         &.dark {
           background: radial-gradient(
             50% 50% at 50% 50%,
