--- a/client/src/pages/BureauPage/BureauPage.scss
+++ b/client/src/pages/BureauPage/BureauPage.scss
@@ -1,40 +1,32 @@
 .bureau-page {
-  position: relative;
+  height: 100%;
+  width: 100%;
 
-  &__back1 {
-    position: absolute;
-    mix-blend-mode: screen;
-    width: 100%;
-    // height: 100vh;
-    left: 40%;
-    top: 0;
-    &.dark {
-      opacity: 25%;
-    }
-  }
-
-  &__back2 {
-    position: absolute;
-    mix-blend-mode: screen;
-    width: 100%;
-    // height: 100vh;
-    right: 45%;
-    top: 30%;
-    &.dark {
-      opacity: 25%;
-    }
-  }
-
+  &__back1,
+  &__back2,
   &__back3 {
     position: absolute;
     mix-blend-mode: screen;
     width: 100%;
-    // height: 100vh;
-    left: 45%;
-    bottom: 0;
+    /* height: 100vh; */
     &.dark {
       opacity: 25%;
     }
+  }
+
+  &__back1 {
+    left: 40%;
+    top: 0;
+  }
+
+  &__back2 {
+    right: 45%;
+    top: 30%;
+  }
+
+  &__back3 {
+    left: 45%;
+    bottom: 0;
   }
 }
 
@@ -43,9 +35,22 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 7rem 5rem;
+  padding: 8rem 5rem;
 
-  &__side {
+  &__line2,
+  &__line3 {
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5rem;
+  }
+
+  &__line3 {
+    width: 100%;
+  }
+
+  &__card {
     z-index: 3;
     margin-top: 7rem;
     display: flex;
@@ -56,19 +61,20 @@
     &-container {
       display: flex;
       align-items: center;
-      width: 100%;
       justify-content: center;
-      gap: 2rem;
+      flex-direction: column;
+      width: 100%;
+      gap: 1rem;
     }
 
-    &-lead {
+    &-img {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 8rem;
-      width: 8rem;
-      border-radius: 100%;
-      border: 3px solid var(--secondary-color);
+      height: 13rem;
+      width: 13rem;
+      border-radius: 50%;
+      border: 5px solid var(--secondary-color);
       text-align: center;
       overflow: hidden;
 
@@ -83,10 +89,20 @@
       }
     }
 
-    &-team {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 2.5rem;
+    &-name {
+      font-size: 2.25rem;
+      color: var(--secondary-color);
+      text-align: center;
+
+      &.dark {
+        color: var(--primary-color);
+      }
+    }
+
+    &-post {
+      text-align: center;
+      font-size: 1.25rem;
+      margin-top: -1rem;
     }
   }
 }
@@ -104,23 +120,28 @@
 }
 
 @media (max-width: 994px) {
-  .teams__side-container {
-    flex-direction: column;
-  }
-  .hr {
-    width: 60%;
-    transform: rotate(180deg);
-  }
-  .teams__side-team {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-  .title__container {
-    margin: auto;
-    .title {
-      font-size: 2rem;
+  .bureau {
+    padding: 8rem 2rem;
+
+    &__line2,
+    &__line3 {
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 2rem;
+      gap: 2.5rem;
+    }
+
+    &__card {
+      &-img {
+        height: 10rem;
+        width: 10rem;
+      }
+
+      &-name {
+        font-size: 1.75rem;
+      }
     }
   }
 }
