--- a/client/src/pages/RecrutePage/RecrutePage.scss
+++ b/client/src/pages/RecrutePage/RecrutePage.scss
@@ -15,9 +15,11 @@
 
   @media screen and (max-width: 700px) {
     padding: 7rem 1rem;
+
     .form-container {
       width: 100%;
     }
+
     .button-main {
       width: 90%;
     }
@@ -25,7 +27,10 @@
 }
 
 .counter {
-  padding: 3rem 0;
+  padding: 2rem 0;
+}
+.link {
+  padding: 0 0 2rem 0;
 }
 
 .form-container {
@@ -41,21 +46,23 @@
   padding: 2rem;
   margin: auto;
   border-radius: 10px;
-  width: 90%;
+  width: 70%;
 
   .content {
-    width: 90%;
+    width: 100%;
   }
 
   .contact-text {
     text-align: center;
     margin: 15px;
+
     .title__container {
       display: flex;
       justify-content: center;
       position: relative;
       width: fit-content;
       margin: auto;
+
       .title {
         margin: 10px auto;
         backdrop-filter: blur(24px);
@@ -73,11 +80,7 @@
         -webkit-text-fill-color: transparent;
         background-clip: text;
         text-fill-color: transparent;
-
         mix-blend-mode: normal;
-
-        @media screen and (max-width: ) {
-        }
 
         &.dark {
           background: radial-gradient(
@@ -89,7 +92,6 @@
           -webkit-text-fill-color: transparent;
           background-clip: text;
           text-fill-color: transparent;
-
           mix-blend-mode: normal;
         }
       }
@@ -99,20 +101,27 @@
   .contactForm {
     display: flex;
     flex-direction: column;
+    align-items: center;
+
     .Name_Area {
       display: flex;
       justify-content: center;
       gap: 10px;
+
       .name_input {
         width: 100%;
       }
     }
+
     .input {
+      width: 90%;
       margin: 8px;
+
       input {
         height: 3rem;
         border-radius: 10px;
       }
+
       textarea {
         max-height: 10rem;
         min-height: 10rem;
@@ -121,5 +130,9 @@
         resize: none;
       }
     }
+  }
+
+  @media screen and (max-width: 768px) {
+    width: 90%;
   }
 }
