--- a/client/src/pages/ServicesPage/ServicesPage.scss
+++ b/client/src/pages/ServicesPage/ServicesPage.scss
@@ -1,9 +1,9 @@
 .services-page {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   padding: 7rem 5rem;
+  height: 100vh;
 }
 
 .Title {
