--- a/client/src/components/About/About.scss
+++ b/client/src/components/About/About.scss
@@ -1,95 +1,26 @@
 .about {
-  padding: 0 10rem;
-  width: 100%;
-  gap: 10rem;
-  display: flex;
-  align-items: flex-start;
-
-  @media screen and (max-width: 1200px) {
-    padding: 0 5rem;
-    gap: 5rem;
-  }
-
-  @media screen and (max-width: 800px) {
-    padding: 0 2rem;
-    gap: 2rem;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  &__container {
-    width: 75%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 3rem;
-    z-index: 3;
-    flex-wrap: wrap;
-
-    .title__container {
-      position: relative;
-
-      .title {
-        box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
-        backdrop-filter: blur(24px);
-        font-size: 2.5rem;
-        border-radius: 20px;
-        padding: 0.75rem 1.5rem;
-        width: fit-content;
-        text-align: center;
-        border: 1px solid white;
-        background: radial-gradient(
-          51.72% 61.73% at 50% 50%,
-          #4358ff 0%,
-          #1f2656 63.85%
-        );
-
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        text-fill-color: transparent;
-        mix-blend-mode: normal;
-
-        @media screen and (max-width: 500px) {
-          font-size: 1.5rem !important;
-        }
-      }
-
-      .starImg {
-        position: absolute;
-        bottom: -10px;
-        left: -20px;
-        width: 3rem;
-        height: 3rem;
-      }
-    }
-  }
-}
-
-.about__content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  height: 100%;
+  gap: 5rem;
 
-  .about__paragraph {
-    @media screen and (max-width: 1200px) {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: column;
-    }
-
-    @media screen and (max-width: 600px) {
-      font-size: 1.1rem;
-    }
-
+  &__container {
     display: flex;
-    flex-direction: row-reverse;
+    gap: 3.75rem;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 3rem;
+    width: 100%;
+  }
+
+  &__paragraph {
     font-weight: 400;
     font-size: 1.5rem;
-    text-align: center;
+    text-align: left;
     z-index: 5;
   }
 }
@@ -104,10 +35,6 @@
   padding-bottom: 4rem;
   filter: brightness(0) saturate(100%) invert(17%) sepia(9%) saturate(4079%)
     hue-rotate(195deg) brightness(95%) contrast(100%);
-
-  &.dark {
-    filter: none;
-  }
 
   @media screen and (max-width: 800px) {
     width: 100%;
