--- a/client/src/components/Hero/Hero.scss
+++ b/client/src/components/Hero/Hero.scss
@@ -1,150 +1,53 @@
 .hero {
   height: 100vh;
-  width: 100vw;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  position: relative;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  padding: 10rem 0;
 
-  .video-player {
-    position: absolute;
-    z-index: 20;
-    width: 85%;
-    border: var(--dark-color) 0.9rem solid;
-
-    .close-btn {
-      position: absolute;
-      z-index: inherit;
-      right: 10px;
-      top: 10px;
-      background: linear-gradient(180deg, #1614d1 0%, #1f2656 35.94%);
-      color: white;
-      border: 0;
-      border-radius: 0.7rem;
-      padding: 0.3em 0.8em;
-      cursor: pointer;
-
-      .icon__mode {
-        width: 1.2rem;
-      }
-    }
-  }
-
-  &__back {
-    position: absolute;
-    mix-blend-mode: screen;
-    width: 100%;
-
-    &.dark {
-      opacity: 20%;
-    }
-
-    @media only screen and (max-width: 768px) {
-      width: 170%;
+  &__chess {
+    img {
+      filter: drop-shadow(0 0 100px rgba(255, 178, 63, 0.7));
     }
   }
 
   &__content {
-    width: 70%;
-    text-align: center;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    z-index: 10;
-    gap: 0.8rem;
+    gap: 1rem;
+    width: 100%;
 
     &-slogan {
-      font-size: 6rem;
-      line-height: 6rem;
-      font-weight: 1000;
-      max-width: 100%;
-      background: radial-gradient(
-        51.72% 61.73% at 50% 50%,
-        #1d37fe 0%,
-        #0a1142 100%
-      );
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      text-fill-color: transparent;
-      mix-blend-mode: normal;
+      font-size: 5.5rem;
+      font-weight: 800;
+      line-height: 7.5rem;
 
-      @media only screen and (max-width: 1000px) {
-        font-size: 4rem;
-      }
-
-      &.dark {
-        background: radial-gradient(
-          50% 50% at 50% 50%,
-          #ffffff 0%,
-          #ffb13e 100%
-        );
+      span {
+        background: linear-gradient(90deg, #ffbd5b -1.3%, #fff 65.63%);
+        background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        background-clip: text;
-        text-fill-color: transparent;
       }
     }
 
     &-text {
-      max-width: 70%;
-      font-size: 1.3vw;
-
-      @media only screen and (max-width: 900px) {
-        font-size: 1rem;
-      }
+      font-size: 1.35rem;
+      width: 75%;
     }
 
     &-buttons {
+      margin-top: 8px;
       display: flex;
-      gap: 0.5rem;
-      height: 1.5rem;
-
-      @media only screen and (max-width: 450px) {
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        width: 70%;
-        height: auto;
-
-        button {
-          width: 8rem;
-          font-size: 0.75rem;
-        }
-      }
+      gap: 2rem;
     }
-  }
 
-  @media screen and (max-width: 780px) {
-    &__content {
-      &-slogan {
-        line-height: 3.5rem;
-        font-size: 3.5rem;
+    &-socials {
+      margin-top: 5rem;
+      display: flex;
+      gap: 2rem;
+
+      a > img {
+        width: 2.5rem;
       }
-    }
-  }
-
-  @media screen and (max-width: 500px) {
-    padding: 7rem 0 3rem 0;
-    height: 100%;
-
-    &__content {
-      width: 80%;
-
-      &-slogan {
-        line-height: 3rem;
-        font-size: 2.25rem;
-      }
-    }
-  }
-
-  @media screen and (min-width: 1200px) {
-    .hero__content-slogan {
-      max-width: 80%;
     }
   }
 }
