--- a/client/src/components/Title/Title.scss
+++ b/client/src/components/Title/Title.scss
@@ -3,9 +3,9 @@
 
   img {
     position: absolute;
-    width: 25%;
-    top: -10px;
-    left: -50px;
+    width: 110px;
+    top: -40%;
+    left: -15%;
   }
 
   .title {
