--- a/client/src/components/About/About.scss
+++ b/client/src/components/About/About.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  height: 100vh;
   gap: 5rem;
 
   &__container {
@@ -19,7 +19,7 @@
 
   &__paragraph {
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     text-align: left;
     z-index: 5;
   }
