--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -3,18 +3,52 @@
   align-items: center;
   justify-content: center;
   flex-direction: row;
+  border: 0;
+  background: rgba(255, 255, 255, 0.01);
+  box-shadow: 0px 0px 165px 17px rgba(255, 255, 255, 0.06);
+  backdrop-filter: blur(59px);
 
   &__img {
+    position: relative;
     flex: 1;
+    width: 100%;
+    height: 100%;
 
     img {
-      object-fit: fill;
+      position: absolute;
+      object-fit: cover;
       width: 100%;
+      height: 100%;
     }
   }
 
   &__container {
-    flex: 1.5;
-    background-color: green;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    flex: 1.25;
+    padding: 1rem;
+
+    &-label {
+      margin-bottom: 1rem;
+      padding: 0.25rem;
+      border-radius: 3px;
+      background-color: var(--primary-color);
+      color: black;
+      text-align: center;
+      width: 100%;
+    }
+
+    &-title {
+      font-size: 1.8rem;
+      color: var(--primary-color);
+    }
+
+    button {
+      font-size: 1rem;
+      border-radius: 5px;
+      padding: 0.5rem 1.5rem;
+      width: fit-content;
+    }
   }
 }
