--- a/client/src/components/Activities/Activities.scss
+++ b/client/src/components/Activities/Activities.scss
@@ -1,11 +1,14 @@
 .activities {
   display: flex;
   flex-direction: column;
-  gap: 8rem;
+  align-items: center;
+  gap: 5rem;
+  height: 100vh;
 
   &__container {
-    width: 100%;
+    // width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 3.5rem;
   }
 }
