--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -10,6 +10,14 @@ html {
   font-family: "Outfit", sans-serif;
 }
 
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 :root {
   --bg-color: #000018;
 
