--- a/client/src/components/About/About.scss
+++ b/client/src/components/About/About.scss
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 100%;
   gap: 5rem;
+  margin-bottom: 2.5rem;
 
   &__container {
     display: flex;
@@ -33,9 +34,38 @@
 .jeeaImg {
   width: 22.5rem;
   padding-bottom: 4rem;
-  @media screen and (max-width: 800px) {
-    width: 100%;
+  @media screen and (max-width: 900px) {
+    width: 70%;
     margin: 0.5rem 0;
     padding-bottom: 2rem;
+  }
+}
+
+// Small Screen (Phone)
+@media screen and (max-width: 1200px) {
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__container {
+      display: flex;
+      flex-direction: column;
+      gap: 6rem;
+    }
+
+    &__content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+
+    &__paragraph {
+      font-weight: 400;
+      font-size: 3.5vw;
+      text-align: center;
+      z-index: 5;
+    }
   }
 }
