--- a/client/src/components/Activities/Activities.scss
+++ b/client/src/components/Activities/Activities.scss
@@ -3,12 +3,31 @@
   flex-direction: column;
   align-items: center;
   gap: 5rem;
-  height: 100vh;
+  height: 100%;
+  margin-bottom: 2.5rem;
 
   &__container {
     // width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 3.5rem;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .activities {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+    height: 100%;
+    margin-bottom: 2.5rem;
+
+    &__container {
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 3.5rem;
+    }
   }
 }
