--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -9,13 +9,11 @@
   backdrop-filter: blur(59px);
 
   &__img {
-    position: relative;
     flex: 1;
     width: 100%;
     height: 100%;
 
     img {
-      position: absolute;
       object-fit: cover;
       width: 100%;
       height: 100%;
@@ -49,6 +47,50 @@
       border-radius: 5px;
       padding: 0.5rem 1.5rem;
       width: fit-content;
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    &__img {
+      width: 100%;
+      height: 100%;
+    }
+
+    &__container {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      flex: 1.25;
+      padding: 1rem;
+
+      &-label {
+        margin-bottom: 1rem;
+        padding: 0.25rem;
+        border-radius: 3px;
+        background-color: var(--primary-color);
+        color: black;
+        text-align: center;
+        width: 100%;
+      }
+
+      &-title {
+        font-size: 1.8rem;
+        color: var(--primary-color);
+      }
+
+      button {
+        font-size: 1rem;
+        border-radius: 5px;
+        padding: 0.5rem 1.5rem;
+        width: fit-content;
+      }
     }
   }
 }
