--- a/client/src/components/Contact/Contact.scss
+++ b/client/src/components/Contact/Contact.scss
@@ -1,5 +1,6 @@
 .contact {
-  height: 100vh;
+  height: 100%;
+  margin: 2.5rem 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -63,6 +64,10 @@
   padding: 15px 0 0;
   margin-top: 10px;
   width: 45%;
+
+  @media screen and (max-width: 600px) {
+    width: 100%;
+  }
 
   &-email,
   &-text {
@@ -138,5 +143,129 @@
   &:required,
   &:invalid {
     box-shadow: none;
+  }
+}
+
+// Small Screen (Phone)
+
+@media screen and (max-width: 1450px) {
+  .contact {
+    height: 100%;
+    margin: 2.5rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 5rem;
+
+    &__container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: column;
+      width: 100%;
+
+      &-info {
+        padding: 3rem 4.5rem;
+        width: 100%;
+        fill: rgba(5, 4, 26, 0.1);
+        backdrop-filter: blur(80px);
+
+        &-list {
+          margin-top: 5rem;
+          display: flex;
+          flex-direction: column;
+          gap: 3rem;
+        }
+
+        &-item {
+          display: flex;
+          align-items: center;
+          gap: 2rem;
+
+          img {
+            width: 2.5rem;
+            height: 100%;
+          }
+        }
+      }
+
+      &-form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 4rem 6rem;
+        width: 100%;
+        height: 100%;
+        gap: 1rem;
+        background: rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(56px);
+
+        &-names {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .contact {
+    &__container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: column;
+      width: 100%;
+
+      &-info {
+        padding: 2rem 2rem;
+        width: 100%;
+        fill: rgba(5, 4, 26, 0.1);
+        backdrop-filter: blur(80px);
+
+        &-list {
+          margin: 3rem 0;
+          display: flex;
+          flex-direction: column;
+          gap: 3rem;
+        }
+
+        &-item {
+          display: flex;
+          align-items: center;
+          gap: 2rem;
+          font-size: 1rem;
+
+          img {
+            width: 1.5rem;
+            height: 100%;
+          }
+        }
+      }
+
+      &-form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 3rem 3rem;
+        width: 100%;
+        height: 100%;
+        gap: 1rem;
+        background: rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(56px);
+
+        &-names {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          flex-direction: column;
+        }
+      }
+    }
   }
 }
