--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -38,6 +38,7 @@ a {
   &-main {
     padding: 0.65rem 6rem;
     border-radius: 0.65rem;
+    text-wrap: nowrap;
     font-size: 1.1rem;
     font-weight: 600;
     transition: all 0.5s;
@@ -50,21 +51,15 @@ a {
       background-color: #ff9901;
     }
 
-    @media only screen and (max-width: 1000px) {
-      font-size: medium;
-      height: 7vh;
-      // width: 20vw;
-    }
-
-    @media only screen and (max-width: 900px) {
-      height: 2.5rem;
-      // width: 100%;
+    @media only screen and (max-width: 700px) {
+      height: 2.75rem;
     }
   }
 
   &-stroke {
     background: transparent;
     padding: 0.5rem 3rem;
+    text-wrap: nowrap;
     border-radius: 0.65rem;
     font-size: 1.1rem;
     font-weight: 600;
@@ -79,15 +74,8 @@ a {
       border: none;
     }
 
-    @media only screen and (max-width: 1000px) {
-      font-size: medium;
-      height: 7vh;
-      width: 20vw;
-    }
-
-    @media only screen and (max-width: 900px) {
-      height: 2.5rem;
-      width: 100%;
+    @media only screen and (max-width: 700px) {
+      height: 2.75rem;
     }
   }
 }
