--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -13,4 +13,12 @@
   padding: 0 13rem;
   position: relative;
   overflow: hidden;
+
+  @media screen and (max-width: 700px) {
+    padding: 0 3rem !important;
+  }
+
+  @media screen and (max-width: 1300px) {
+    padding: 0 6rem;
+  }
 }
